--- a/FriendsMess/Views/Home/Contact.cshtml
+++ b/FriendsMess/Views/Home/Contact.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<div>
+<div class="jumbotron">
     <h2>Md. Robin Khan</h2>
-    <p>robin35-908@diu.edu.bd</p>
+    <p>Email:robin35-908@diu.edu.bd</p>
+    <p>Dhaka, Bangladesh</p>
 </div>
