--- a/FriendsMess/Views/ViewOnly/Home.cshtml
+++ b/FriendsMess/Views/ViewOnly/Home.cshtml
@@ -23,36 +23,36 @@
     @if (Model.Members.Count > 0)
     {
         <div>
-            <table class="table table-hover table-bordered">
+            <table id="HomeTbl" class="table table-hover table-bordered">
                 <thead>
-                <tr class="danger">
-                    <th>Name</th>
-                    <th>Deposit</th>
-                    <th>Total Meal</th>
-                    <th>Meal Cost</th>
-                    <th>Ohter Expenses</th>
-                    <th>Balance</th>
-                </tr>
+                    <tr class="danger">
+                        <th>Name</th>
+                        <th>Deposit</th>
+                        <th>Total Meal</th>
+                        <th>Meal Cost</th>
+                        <th>Ohter Expenses</th>
+                        <th>Balance</th>
+                    </tr>
                 </thead>
                 <tbody>
-                @foreach (var member in Model.Members)
-                {
-                    var home = new ViewOnlyController();
+                    @foreach (var member in Model.Members)
+                    {
+                        var home = new ViewOnlyController();
 
-                    var totalMeal = home.GetTotalMeal(member.Id);
-                    var mealExpense = home.GetMealRate((string)Session["GuestUser"]) * totalMeal;
-                    var otherExpense = home.GetOtherExpense((string)Session["GuestUser"]);
-                    var balance = member.Deposit - (mealExpense + otherExpense);
+                        var totalMeal = home.GetTotalMeal(member.Id);
+                        var mealExpense = home.GetMealRate((string)Session["GuestUser"]) * totalMeal;
+                        var otherExpense = home.GetOtherExpense((string)Session["GuestUser"]);
+                        var balance = member.Deposit - (mealExpense + otherExpense);
 
-                    <tr class="primay">
-                        <td>@member.Name</td>
-                        <td>@member.Deposit.ToString("C0", CultureInfo.CreateSpecificCulture("en-BD"))</td>
-                        <td>@totalMeal</td>
-                        <td>@mealExpense.ToString("C2", CultureInfo.CreateSpecificCulture("en-BD"))</td>
-                        <td>@otherExpense.ToString("C2", CultureInfo.CreateSpecificCulture("en-BD"))</td>
-                        <td>@balance.ToString("C2", CultureInfo.CreateSpecificCulture("en-BD"))</td>
-                    </tr>
-                }
+                        <tr style="background-color:gainsboro">
+                            <td>@member.Name</td>
+                            <td>@member.Deposit.ToString("C0", CultureInfo.CreateSpecificCulture("en-BD"))</td>
+                            <td>@totalMeal</td>
+                            <td>@mealExpense.ToString("C2", CultureInfo.CreateSpecificCulture("en-BD"))</td>
+                            <td>@otherExpense.ToString("C2", CultureInfo.CreateSpecificCulture("en-BD"))</td>
+                            <td>@balance.ToString("C2", CultureInfo.CreateSpecificCulture("en-BD"))</td>
+                        </tr>
+                    }
                 </tbody>
             </table>
             <br/>
@@ -75,14 +75,14 @@
                 var totalMember = Model.Members.Count;
                 for (int i = 0; i < totalDay; i++)
                 {
-                    <tr>
+                    <tr style="background-color:gainsboro">
                         <td>@Model.Days[j++].DayNumber</td>
-                        @for (int k=0; k<totalMember; k++)
+                        @for (int k = 0; k < totalMember; k++)
                         {
                             <td>@Model.Meals[m++].MealNo</td>
                         }
                     </tr>
-                    
+
                 }
             }
             </tbody>
@@ -100,3 +100,13 @@
 
 </body>
 </html>
+@section scripts
+{
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $("#HomeTbl").DataTable({
+                paging:false
+            });
+        });
+    </script>
+}
