--- a/FriendsMess/Views/ViewOnly/ViewMeal.cshtml
+++ b/FriendsMess/Views/ViewOnly/ViewMeal.cshtml
@@ -26,15 +26,15 @@
                 {
                     Console.WriteLine("There was some problem while converting meals into integer!");
                 }
-                <tr>
+                <tr style="background-color:gainsboro">
                     <td>@day.DayNoId</td>
                     <td>@day.MealNo</td>
                 </tr>
             }
-            <tr>
-                <td style="text-align: right">Total:</td>
-                <td style="font-weight: bold">@totalMeal</td>
-            </tr>
+                <tr style="background-color:greenyellow">
+                    <td style="text-align: right">Total:</td>
+                    <td style="font-weight: bold">@totalMeal</td>
+                </tr>
             </tbody>
         </table>
     </div>
