--- a/FriendsMess/Views/Shared/_Layout.cshtml
+++ b/FriendsMess/Views/Shared/_Layout.cshtml
@@ -9,8 +9,8 @@
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
-<body style="background-color: dimgrey">
-    <div class="navbar navbar-inverse navbar-fixed-top" style="background-color:lightblue;">
+<body>
+    <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -34,7 +34,7 @@
         </div>
     </div>
     <div class="clearfix"></div>
-    <div class="container body-content">
+    <div class="container body-content bannerImage">
         @RenderBody()
         <hr />
         <footer>
