--- a/FriendsMess/Views/Extra/Index.cshtml
+++ b/FriendsMess/Views/Extra/Index.cshtml
@@ -14,7 +14,7 @@
 <div>
     <table id="OthersTbl" class="table table-bordered table-hover">
         <thead>
-        <tr class="danger">
+        <tr class="text-danger">
             <th>Name</th>
             <th>Amount</th>
             <th>Details</th>
@@ -24,7 +24,7 @@
         <tbody>
         @foreach (var extra in Model)
         {
-            <tr style="background-color:gainsboro">
+            <tr class="text-info">
                 <td>@Html.ActionLink(extra.Name, "Edit", new { id = extra.Id })</td>
                 <td>@extra.Amount.ToString("C0", CultureInfo.CreateSpecificCulture("en-BD"))</td>
                 <td>@extra.Description</td>
@@ -40,10 +40,10 @@
 
             }
                 }
-                <td><button data-extra-id=@extra.Id class="btn-link js-clearExtra">Delete</button></td>
+                <td><button data-extra-id=@extra.Id class="btn btn-danger js-clearExtra">Delete</button></td>
             </tr>
         }
-            <tr style="background-color:greenyellow">
+            <tr >
                 <td style="text-align: right">Total:</td>
                 <td style="font-weight: bold">@totalOther.ToString("C2", CultureInfo.CreateSpecificCulture("en-BD"))</td>
                 <td></td>
@@ -61,25 +61,27 @@ else
 }
 @section scripts{
     <script>
-        $(document).ready(function () {
-            $("#OthersTbl").DataTable();
-            $(".js-clearExtra").on("click",
-                function () {
-                    var button = $(this);
-                    bootbox.confirm("Are you sure you want to delete this extra expense?",
-                        function (result) {
-                            if (result) {
-                                $.ajax({
-                                    url: '@Url.Action("Delete","Extra")',
-                                    data: { id: button.attr("data-extra-id") },
-                                    success:function() {
-                                        window.location.href = '@Url.Action("Index","Extra")';
-                                    }
-                                });
-                            }
-                        });
-                });
-        });
+        //$(document).ready(function() {
+        //    $("#OthersTbl").DataTable({
+        //        paging: true,
+                
+        //});
+        $(".js-clearExtra").on("click",
+            function() {
+                var button = $(this);
+                bootbox.confirm("Are you sure you want to delete this extra expense?",
+                    function(result) {
+                        if (result) {
+                            $.ajax({
+                                url: '@Url.Action("Delete", "Extra")',
+                                data: { id: button.attr("data-extra-id") },
+                                success: function() {
+                                    window.location.href = '@Url.Action("Index", "Extra")';
+                                }
+                            });
+                        }
+                    });
+            });
     </script>
 }
 
