--- a/FriendsMess/Views/Home/Index.cshtml
+++ b/FriendsMess/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
     <div>
         <table id="HomeTbl" class="table table-hover table-bordered">
             <thead>
-                <tr class="danger">
+                <tr class="text-info">
                     <th>Name</th>
                     <th>Deposit</th>
                     <th>Total Meal</th>
@@ -33,11 +33,22 @@
                     var totalMeal = home.GetTotalMeal(member.Id);
                     var mealExpense = home.GetMealRate(User.Identity.GetUserName()) * totalMeal;
                     var otherExpense = home.GetOtherExpense(User.Identity.GetUserName());
-                    var balance = member.Deposits.SingleOrDefault(mon=>mon.MonthNo==3).Amount - (mealExpense + otherExpense);
+                    float balance;
+                    int currentDeposit;
+                    try
+                    {
+                        balance = member.Deposits.SingleOrDefault(mon => mon.MonthNo == 3).Amount - (mealExpense + otherExpense);
+                        currentDeposit = member.Deposits.SingleOrDefault(depo => depo.MonthNo == 3).Amount;
+                    }
+                    catch (Exception e)
+                    {
+                        balance = 0;
+                        currentDeposit = 0;
+                    }
 
-                    <tr style="background-color:gainsboro">
-                        <td>@member.Name</td>
-                        <td>@member.Deposits.SingleOrDefault(depo=>depo.MonthNo==3).Amount.ToString("C0", CultureInfo.CreateSpecificCulture("en-BD"))</td>
+                    <tr>
+                        <td><span><img src="~/Images/robin.jpg" style="border-radius:50%; padding: 10px;" width="50px;" height="50px;" /></span>@member.Name</td>
+                        <td>@currentDeposit.ToString("C0", CultureInfo.CreateSpecificCulture("en-BD"))</td>
                         <td>@totalMeal</td>
                         <td>@mealExpense.ToString("C2", CultureInfo.CreateSpecificCulture("en-BD"))</td>
                         <td>@otherExpense.ToString("C2", CultureInfo.CreateSpecificCulture("en-BD"))</td>
@@ -52,13 +63,13 @@
                                 <td>@balance.ToString("C2", CultureInfo.CreateSpecificCulture("en-BD"))</td>
 
                             }
-}
+                        }
                     </tr>
                 }
             </tbody>
         </table>
         <br />
-        <h2 style="text-align: center; color:white">Detailed Meals</h2>
+        @*<h2 style="text-align: center; color:white">Detailed Meals</h2>
         <table class="table table-bordered table-hover">
             <thead>
                 <tr class="danger">
@@ -88,7 +99,7 @@
                     }
                 }
             </tbody>
-        </table>
+        </table>*@
     </div>
 
 }
