--- a/FriendsMess/Views/Extra/Index.cshtml
+++ b/FriendsMess/Views/Extra/Index.cshtml
@@ -55,8 +55,8 @@
 }
 else
 {
-    <div style="margin-top: 10%;" class=" jumbotron">
-        <h3 style="color:red;">No extra expenses yet !</h3>
+    <div style="margin-top: 7%;background: brown" class=" jumbotron">
+        <h3>No extra expenses yet !</h3>
     </div>
 }
 @section scripts{
