--- a/FriendsMess/Views/Home/Expense.cshtml
+++ b/FriendsMess/Views/Home/Expense.cshtml
@@ -75,8 +75,8 @@
 }
 else
 {
-    <div style="margin-top: 10%;" class="jumbotron">
-        <h3 style="color:red;">No expenses to show !</h3>
+    <div style="margin-top: 7%;background: brown" class="jumbotron">
+        <h3>No expenses yet !</h3>
         
     </div>
 }
