--- a/FriendsMess/Content/Site.css
+++ b/FriendsMess/Content/Site.css
@@ -2,6 +2,7 @@
     padding-top: 50px;
     padding-bottom: 20px;
     font-size: 120%;
+    /*font-family: 'Roboto Condensed', sans-serif;*/
     font-family: 'Roboto Condensed', sans-serif;
     background:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url(../Images/meal.jpg) no-repeat 0px 0px fixed;
     background-size: cover;
@@ -11,6 +12,12 @@
 .bannerImage{
     
 }
+
+select option {
+    background-color:crimson;
+    border-bottom: 1px white;
+}
+
 body table tr td a {
     color: white;
 }
