--- a/FriendsMess/Content/bootstrap.css
+++ b/FriendsMess/Content/bootstrap.css
@@ -1486,7 +1486,8 @@ th {
 
 .table-hover > tbody > tr:hover > td,
 .table-hover > tbody > tr:hover > th {
-  background-color:midnightblue;
+  background-color:blueviolet;
+    color: white;
 }
 
 table col[class*="col-"] {
@@ -1723,9 +1724,9 @@ input[type="number"]::-webkit-inner-spin-button {
   padding: 6px 12px;
   font-size: 14px;
   line-height: 1.428571429;
-  color: #555555;
+  color: #FFFFFF;
   vertical-align: middle;
-  background-color: #ffffff;
+  background-color: transparent;
   border: 1px solid #cccccc;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
@@ -4524,6 +4525,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
   color: #c9302c;
 }
 
+
+
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
   color: #ffffff;
@@ -4545,12 +4548,12 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse .navbar-toggle {
-  border-color: #333333;
+  border-color: #31b0d5;
 }
 
 .navbar-inverse .navbar-toggle:hover,
 .navbar-inverse .navbar-toggle:focus {
-  background-color: #333333;
+  background-color: #31b0d5;
 }
 
 .navbar-inverse .navbar-toggle .icon-bar {
