--- a/FriendsMess/Views/Home/Contact.cshtml
+++ b/FriendsMess/Views/Home/Contact.cshtml
@@ -1,13 +1,19 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<div class="jumbotron" style="margin-top: 5%;background-color:coral">
 
+<div class="jumbotron" style="margin-top: 5%;background-color:crimson">
+    <hr/>
     <div style="float: left;">
         <img src="~/Images/robin.jpg" style="border-radius:50%; padding: 10px;" width="150px;" height="150px;" />
     </div>
-    <h2 style="color: white">Md. Robin Khan</h2>
-    <p>Email:robin35-908@diu.edu.bd</p>
-    <p>Dhaka, Bangladesh</p>
-
+    <div>
+        <h2 style="color: white">Md. Robin Khan</h2>
+        <p><span class="glyphicon glyphicon-envelope"></span> robin35-908@diu.edu.bd</p>
+        <p><span class="glyphicon glyphicon-earphone"></span> +08801111111111</p>
+        <p>Dhaka, Bangladesh</p>
+    </div>
+    
+    <br/>
+    <hr/>
 </div>
