--- a/FriendsMess/Views/Members/Index.cshtml
+++ b/FriendsMess/Views/Members/Index.cshtml
@@ -25,11 +25,11 @@
     @foreach (var member in Model)
     {
         int currentDeposit;
-        <tr class="text-danger">
-            <td><span><img src="~/Images/@member.ImagePath" onError="this.onerror = null; this.src = '/Images/meal.jpg';" style=" border-radius:50%; padding 10px;" width="50px;" height="50px;" /></span>    @Html.ActionLink(member.Name, "Edit", new { id = member.Id })</td>
+        <tr>
+            <td><span><img src="~/Images/@member.ImagePath" onError="this.onerror = null; this.src = '/Images/meal.jpg';" style=" border-radius:50%; border:1.8px solid #00fa9a" width="50px;" height="50px;" /></span>    @Html.ActionLink(member.Name, "Edit", new { id = member.Id })</td>
             @try
             {
-                currentDeposit = member.Deposits.SingleOrDefault(m => m.MonthNo == 3).Amount;
+                currentDeposit = member.Deposits.SingleOrDefault(m => m.MonthNo == (int)Session["MonthNo"]).Amount;
 
             }
             catch (Exception e)
