--- a/FriendsMess/Content/bootstrap.css
+++ b/FriendsMess/Content/bootstrap.css
@@ -4522,7 +4522,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse .navbar-nav > li > a {
-  color: #c9302c;
+  color: #adff2f;
 }
 
 
