--- a/FriendsMess/Views/Update/New.cshtml
+++ b/FriendsMess/Views/Update/New.cshtml
@@ -28,7 +28,7 @@
                     {
                         <tr>
                             <td style="color:cornsilk">
-                                <span><img src="~/Images/@member.ImagePath" onerror="this.onerror = null; this.src = '/Images/meal.jpg';" style=" border-radius:50%; padding 10px;" width="50px;" height="50px;" /></span>    @member.Name
+                                <span><img src="~/Images/@member.ImagePath" onerror="this.onerror = null; this.src = '/Images/meal.jpg';" style=" border-radius:50%;border:1.8px solid #00fa9a" width="50px;" height="50px;" /></span>    @member.Name
                             </td>
                             <td>
                                 @{
