--- a/FriendsMess/Views/Members/ViewMeal.cshtml
+++ b/FriendsMess/Views/Members/ViewMeal.cshtml
@@ -38,12 +38,12 @@
         </tbody>
     </table>
 </div>
-    
+
 }
 else
 {
-    <div style="margin-top: 10%;" class=" jumbotron">
-        <h3 style="color:red;">No meals yet !</h3>
+    <div style="margin-top: 7%;background: brown" class="jumbotron">
+        <h3>No Meals yet !</h3>
     </div>
 }
 @section scripts{
